[tool.poetry]
name = "repl_python3_anglichancksyajopakazakh228agaahahah"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
imageio = "^2.14.1"
Pyrogram = "^1.3.6"
aiogram = "^2.18"
Flask = "^2.0.2"
meval = "^2.5"
TgCrypto = "^1.2.3"
lottie = "^0.6.11"
gTTS = "^2.2.3"
googletrans = "^3.0.0"
speedtest = "^0.0.1"
wget = "^3.2"
python-qbittorrent = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
